# fastapi-otel-cloudobservability-sample

./: README.md  docker-compose.yml  pyproject.toml  setup.cfg
containers/fastapi/: Dockerfile
containers/otel-collector/: Dockerfile  otel-collector.yml
src/: database.py  functions.py  routers.py
tests/: conftest.py  test_client.py
