[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
description = "FastAPI Sample"
name = "src"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aiosqlite = ">=0.19"
fastapi = {extras = ["all"], version = ">=0.104"}
greenlet = "^3.0"
python = "^3.11"
sqlalchemy = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = ">=0.21"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
ignore_missing_imports = true
